# goat

./: .dockerignore  .env.example  .env_api  .env_template  .eslintrc.js  .gitignore  .kodiak.toml  .prettierrc.js  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Vagrantfile  _config.yml  data_privacy_de.html  data_privacy_en.html  docker-compose-api-test.yml  docker-compose.debug.yaml  docker-compose.yaml  docker-compose.yml  docker.sops  documentation_deployment.md  git-init.sh  git-setup.sh  index.html  index.js  index.md  main.1f19ae8e.css  main.1f19ae8e.js  main.1f19ae8e.map  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  turbo.json  (+4 more)
app/api/: .coverage  .devcontainer.json  .dockerignore  .pylintrc  Dockerfile  README.md  app.js  app_edited.js  backend.dockerfile  celeryd  celeryworker.dockerfile  coverage.xml  customization.yaml  docker-compose.yaml  hex_polygons.geojson  isochrone.geojson  package-lock.json  package.json  prestart.sh  pyproject.toml  pyvenv.cfg  run-requires.txt  test.geojson  test_isochrone.geojson  worker-start.sh  www
app/api/alembic/: env.py  script.py.mako
app/api/alembic/versions/: 0392c9f74bf4_made_nullable.py  05a8620ed15d_changed_foreign_key.py  061d24af05c8_changed_datatype_poi_uid.py  066c60fbd96a_added_layer_and_style_library_again.py  08cd96697f87_added_foreign_keys.py  0b4df0916d2e_added_column_data_upload_id_to_poi_.py  1410c9e58044_added_default_settings_to_study_area.py  14e83d3521e7_init_tables.py  16aa38de4035_added_type_for_poi_config.py  1ad086c93866_added_active_data_upload_ids.py  1bb4e1bcdc24_init_db_tables.py  1c1cd1e80930_fixed_typo_in_column_name.py  1e5d9e0f1e7b_added_layer_and_style_library_again.py  22bd9ac33810_removed_not_needed_table_for_isochrone_.py  23e90887b330_modified_poi_ids.py  24012a59ee9f_made_not_nullable.py  25d7b7610160_added_column_building.py  26681f80c5b4_increased_char_size.py  2ac47db804a1_removed_deleted_from_scenario_and_edit_.py  2b369bf7669a_added_user_project_link.py  2c379f2b7db2_added_new_column_sub_study_area_id.py  2e06d4056b4a_study_area_buffer_not_nullabel.py  2e73a0050d5f_sub_study_area_id_made_foreign_key.py  2ecbc6d64916_renamed_accessibility_index.py  34ab3518ff84_added_constraints_to_config.py  36878c43943c_make_column_not_nullable.py  3a4b84ae169b_changed_from_calculation_to_.py  3a7b4057398a_renamed_column_default_setting_to_.py  3d600e6290fd_added_column_to_refer_to_data_upload.py  3da99e981cec_init_db.py  49557bfaf7ee_added_data_uploads_id_and_study_area_id.py  4bc228ef23f2_add_json_column_edge.py  511dcf746333_added_layer_source_table.py  51eac9c9c842_renamed_poi_column_to_uid.py  52a7b98bc5b9_removed_redundant_column.py  548a853f8e9b_made_edge_and_node_not_serial.py  57abf7756120_test.py  5905b5ccb86a_added_column_for_attribute_mapping.py  5bec0eb53799_init_db_v2.py  6239c44fdb81_deleted_foreign_key.py  (+78 more)
app/api/app/: .devcontainer.json  alembic.ini  pyproject.toml
app/api/app/alembic/: env.py
app/api/app/app/: backend_pre_start.py  main.py  utils.py
app/api/db/: index.js
app/api/scripts/: fetch_cache.py  format.sh  patch_fastapi_utils.sh  post-create.sh
app/api/scripts/patch/: utils.diff
app/api/secrets/: db_configuration.js
app/api/src/: app.py  backend_pre_start.py  celeryworker_pre_start.py  config.py  initial_data.py  jsoline.py  main.py  run_time_method_calls.py  tests_pre_start.py  utils.py  worker.py
app/api/src/core/: celery_app.py  config.py  content.py  dijkstra.py  heatmap.py  heatmap_cython.pyx  isochrone.py  isochrone_surface_utils.py  opportunity.py  r5.py  security.py
app/api/src/crud/: __init__.py  base.py  crud_check_data.py  crud_compute_heatmap.py  crud_compute_heatmap_old.py  crud_content.py  crud_customization.py  crud_folder.py  crud_heatmap.py  crud_indicator.py  crud_isochrone.py  crud_layer.py  crud_layer_library.py  crud_layer_project.py  crud_opportunity_config.py  crud_organization.py  crud_poi_aoi.py  crud_project.py  crud_public_transport.py  crud_r5.py  crud_read_heatmap.py  crud_report.py  crud_role.py  crud_scenario.py  crud_static_layer.py  crud_study_area.py  crud_study_area_geostore.py  crud_traveltime_matrix.py  crud_upload.py  crud_user.py  crud_user_project.py
app/api/src/db/: config.py  data_import.py  db.py  import_raw_data.sh  init_db.py  seed_config.py  seed_data.py  session.py  update.py
app/api/src/endpoints/: deps.py  helpers.py
app/api/src/resources/: enums.py  heatmap.py  poi_de.json  poi_en.json  responses.py
app/api/src/schemas/: __init__.py  building.py  common.py  content.py  content_v2.py  customization.py  data_frame.py  data_preparation.py  data_store.py  error.py  folder.py  geostore.py  heatmap.py  indicators.py  isochrone.py  layer.py  layer_library.py  layer_v2.py  opportunity_config.py  organization.py  poi.py  poi_aoi.py  project.py  r5.py  report.py  response.py  scenario.py  study_area.py  style.py  system.py  upload.py  user.py  utils.py  vector_tile.py  way.py  workers.py
app/api/src/tests/: conftest.py  test_main.py
app/api/src/utils/: async_function.py  response.py
app/api/src/workers/: celery_app.py  heatmap_active_mobility.py  heatmap_motorized_transport.py  isochrone.py  method_connector.py  read_heatmap.py
app/api/tests/: conftest.py
app/geoapi/: .devcontainer.json  Dockerfile  README.md  pyproject.toml
app/geoapi/scripts/: lint.sh
app/geoapi/src/: catalog.py  common.py  exts.py  main.py
apps/core/: Dockerfile  pyproject.toml
apps/core/alembic/: env.py
apps/core/alembic/versions/: 006ee6ccdb7d_added_job_id_to_layers.py  08a39337855a_added_trigger_scenario_id.py  091e369aa04f_added_layer_order_to_project.py  0ef82409cd65_change.py  0ef9d166358c_added_chart_column_to_project_layer_link.py  141691733561_init_update_schema.py  15c48bccb3db_renamed_indicator_to_tool.py  178107e73b4d_add_system_table_for_cron.py  (+41 more)
apps/geoapi/: Dockerfile  README.md  pyproject.toml
apps/routing/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
apps/routing/tests/: conftest.py
(+3851 files in other folders)
