[project]
name = "goat-monorepo"
description = "GOAT, an intelligent software for modern web mapping and integrated planning"
version = "2.0.0"
requires-python = ">3.10,<3.12"
dependencies = [
    "boto3>=1.38.23",
    "dotenv>=0.9.9",
    "python-jose>=3.4.0",
]
authors = [
    { name = "Plan4Better GmbH", email = "info@plan4better.de" },
]
[tool.uv]
package = false
dev-dependencies = [
    "pre-commit==4.0.1",
    "pyright==1.1.384",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-postgresql==6.1.1",
    "pytest-testmon==2.1.1",
    "pytest-sugar==1.0.0",
    "pytest==8.3.5",
    "mypy==1.13.0",
    "ruff==0.7.3"
]

[tool.uv.sources]
core = { workspace = true }
geoapi = { workspace = true }
routing = { workspace = true }
accounts = { workspace = true }

[tool.uv.workspace]
members = ["apps/geoapi", "apps/routing", "apps/accounts", "apps/core"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I", "ANN"]
ignore = ["E501", "ANN101", "ANN102", "ANN401"]
per-file-ignores = { "*/__init__.py" = ["F401"], "*/alembic/*" = ["ANN", "F401", "I001", "W291"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["unit: Unit tests", "integration: Integration tests"]
