[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["Admin <administrator@plan4better.de>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
uvicorn = "^0.17.6"
fastapi = "^0.74"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = {extras = ["librabbitmq", "redis"], version = "^5.2.7"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
SQLAlchemy = "^1.4.23"
httpx = "^0.23.0"
asyncpg = "^0.24.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
GeoAlchemy2 = "^0.9.4"
geojson-pydantic = "^0.3.1"
geojson = "^2.5.0"
geopandas = "0.12.2"
morecantile = "^2.1.4"
cppimport = "^21.3.7"
pandas = "^1.3.4"
pygeos = "0.10.2"
pytest = "^7.1.1"
sentry-sdk = "^1.5.0"
alembic_utils = "^0.7.4"
rich = "^11.0.0"
sqlmodel = "^0.0.8"
schedule = "^1.1.0"
geobuf = "^1.1.1"
schema = "^0.7.5"
openpyxl = "^3.0.9"
XlsxWriter = "^3.0.3"
PyYAML = "^6.0"
motor = "^3.0.0"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
connectorx = "^0.3.0"
numba = "^0.55.2"
codetiming = "^1.4.0"
h3 = "^3.7.6"
cython = "^0.29.33"
pyarrow = "^10.0.1"
asgiref = "^3.6.0"
asyncio = "^3.4.3"


[tool.poetry.dev-dependencies]
mypy = "^0.770"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.1.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^3.0.0"
debugpy = "^1.4.1"
black = "^21.7b0"
pytest-asyncio = "^0.18.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"