[project]
name = "geoapi"
version = "2.0.0"
description = "GOAT GeoAPI"
dependencies = [
    "fastapi[standard]==0.115.4",
    "sqlmodel==0.0.22",
    "asyncpg==0.30.0",
    "geojson==3.1.0",
    "tipg==0.8.0",
    "sentry-sdk==2.18.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
