[project]
name = "routing"
version = "2.0.0"
description = "GOAT Routing"
authors = [
    { name = "Plan4Better GmbH", email = "info@plan4better.de" },
]
dependencies = [
    "fastapi[standard]==0.115.12",
    "sqlmodel==0.0.24",
    "asyncpg==0.30.0",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",
    "numba==0.61.2",
    "scipy==1.15.3",
    "geopandas==1.0.1",
    "shapely==2.0.6",
    "pyarrow==20.0.0",
    "celery==5.4.0",
    "redis==5.2.0",
    "tqdm==4.67.0",
    "sentry-sdk==2.18.0",
    "pydantic>=2.9.2",
    "numpy>=2.0.2",
    "connectorx>=0.4.3",
    "polars==1.31.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

